# wt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/hooks/: 01-npm-install.sh  02-python-venv.sh  03-open-vscode.sh  04-docker-compose.sh  05-setup-env.sh  06-git-tracking.py  07-run-tests.sh  08-notify.sh  09-vscode-settings.py  README.md
tests/: conftest.py  test_config.py  test_integration.py  test_paths.py
wt/: __init__.py  cli.py  config.py  gitutil.py  hooks.py  lock.py  paths.py  status.py  table.py  vscode.py
