[project]
name = "wt"
version = "0.1.0"
description = "Zero-friction git worktree manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
wt = "wt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
